@@ -14,3 +14,6 @@ v1.0: Reorganization of the mapmaker and pointing libraries
       Added separate function to convert to 100 Hz
       Change the functions to convert to equatorial or horizontal coordinates
       Added new option to input the path for creating time 
+      Correct a bug in applying offset to the TOD
+      Changed the algorithm to detrend the TOD
+      Added multiple options to filter the data
